// Vitest Snapshot v1

exports[`components > N8nCard > should render correctly 1`] = `
"<div class=\\"card _card_10dnp_1\\">
  <!---->
  <div class=\\"_content_10dnp_20\\">
    <!---->
    <div class=\\"_body_10dnp_28\\">This is a card.</div>
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`components > N8nCard > should render correctly with header and footer 1`] = `
"<div class=\\"card _card_10dnp_1\\">
  <!---->
  <div class=\\"_content_10dnp_20\\">
    <div class=\\"_header_10dnp_12\\">Header</div>
    <div class=\\"_body_10dnp_28\\">This is a card.</div>
    <div class=\\"_footer_10dnp_13\\">Footer</div>
  </div>
  <!---->
</div>"
`;
